<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_library_dialog"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_8"
        android:text="@string/connection_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:padding="@dimen/padding_8"
            android:text="@string/connection_retry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_offline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:padding="@dimen/padding_8"
            android:text="@string/connection_offline" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_4"
            android:padding="@dimen/padding_8"
            android:text="@string/connection_exit" />

    </LinearLayout>
</LinearLayout>