<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_8"
        android:text="@string/connection_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_exit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="@dimen/padding_8"
            android:text="@string/connection_exit" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_retry"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="@dimen/padding_8"
            android:text="@string/connection_retry" />
    </LinearLayout>
</LinearLayout>